--- a/Testweb/WebContent/index.html
+++ b/Testweb/WebContent/index.html
@@ -109,8 +109,9 @@
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
 		   				<div class="slider-text-inner js-fullheight">
 		   					<div class="desc">
-		   						<p><span>Bora Hotel</span></p>
+		   						<p><span> SanYa Hotel</span></p>
 		   						<h2>Reserve Room for Family Vacation</h2>
+								<h2> 2016.12 - 2017.01 </h2>
 			   					<p>
 			   						<a href="#" class="btn btn-primary btn-lg">Book Now</a>
 			   					</p>
