--- a/Testweb/WebContent/index.html
+++ b/Testweb/WebContent/index.html
@@ -114,7 +114,7 @@
 		   						<h2>Reserve Room for Family Vacation</h2>
 								
 			   					<p>
-			   						<a href="#" class="btn btn-primary btn-lg">Book Now</a>
+			   						<a href="#" class="btn btn-primary btn-lg">限时订购</a>
 			   					</p>
 		   					</div>
 		   				</div>
